[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.2.0", features = ["defmt", "stm32h755zi-cm7"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4.0"


defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
panic-probe = "0.3"

